--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.1",
-    "clerk-nextjs": "^4.29.1"
+    "@clerk/nextjs": "^4.29.1"
   }
 }
