--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
-    "next": "14.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1",
-    "@clerk/nextjs": "^4.29.1"
-  }
+"dependencies": {
+  "next": "^14.2.25",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "tailwindcss": "^3.4.1",
+  "@clerk/nextjs": "^4.31.8"
+}
 }
